--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-nable-device-configurator",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@capacitor/app": "1.0.5",
     "@capacitor/core": "3.2.5",
@@ -13,18 +14,25 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@types/faker": "^5.5.9",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
+    "@types/ramda": "^0.27.46",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "faker": "^5.5.3",
     "ionicons": "^5.4.0",
+    "js-file-download": "^0.4.12",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive": "^9.0.0-beta.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "swiper": "^6.8.4",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -38,7 +46,8 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "zustand": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
