--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "rxjs": "^7.4.0",
+    "socket.io-client": "^4.3.2",
     "swiper": "^6.8.4",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
