--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "faker": "^5.5.3",
+    "framer-motion": "4.1.17",
     "ionicons": "^5.4.0",
     "js-file-download": "^0.4.12",
     "ramda": "^0.27.1",
