Install prettier and do some misc cleanup

--- a/package.json
+++ b/package.json
@@ -11,22 +11,9 @@
     "@capacitor/status-bar": "1.0.5",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/faker": "^5.5.9",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/ramda": "^0.27.46",
-    "@types/react": "^16.14.3",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-dom": "^5.1.7",
-    "faker": "^5.5.3",
     "framer-motion": "4.1.17",
     "ionicons": "^5.4.0",
     "js-file-download": "^0.4.12",
-    "node-sass": "^6.0.1",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -53,7 +40,11 @@
     "workbox-streams": "^5.1.4",
     "zustand": "^3.6.3"
   },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "scripts": {
+    "prepare": "husky install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -78,7 +69,23 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.2.5"
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.6.3",
+    "@types/faker": "^5.5.9",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.19.15",
+    "@types/ramda": "^0.27.46",
+    "@types/react": "^16.14.3",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
+    "@capacitor/cli": "3.2.5",
+    "faker": "^5.5.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.0.2",
+    "node-sass": "^6.0.1",
+    "prettier": "^2.4.1"
   },
   "description": "An Ionic project"
 }
