--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-file-download": "^0.4.12",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-responsive": "^9.0.0-beta.4",
     "react-router": "^5.2.0",
