--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@capacitor/status-bar": "1.0.5",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
+    "@types/react-calendar": "^3.4.4",
     "framer-motion": "4.1.17",
     "ionicons": "^5.4.0",
     "js-file-download": "^0.4.12",
